test/src/e2e_vm_tests/test_programs/should_fail/arith_overflow/u32_sub_const_eval_underflow/src/main.sw
script;

const RESULT: u32 = u32::min() - 1;

fn main() -> u32 {
    RESULT
}
